--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.footer {
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  height:50px;
+  background-color:black;
+  text-align:center;
+  color:white;
+}
 
 .App-link {
   color: #61dafb;
